classwork5/istio-httpserver.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-app
spec:
  selector:
    app: httpserver-app
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: httpsserver-app
spec:
  gateways:
    - httpsserver-app
  hosts:
    - httpsserver-app.cncamp.io
  http:
    - match:
        - port: 443
      route:
        - destination:
            host: httpserver-app.istio-test.svc.cluster.local
            port:
              number: 8080
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver-app
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - httpsserver-app.cncamp.io
      port:
        name: https-default
        number: 443
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: cncamp-credential
